--- a/scss/global/variables.scss
+++ b/scss/global/variables.scss
@@ -10,3 +10,13 @@ $font-size-label: 14px;
 $font-size-text: 16px;
 $font-size-giant-sm: 160px;
 $font-size-giant: 222px;
+
+$font-size-grid-headline: 20px;
+$font-size-grid-headline-md: 18px;
+$font-size-grid-headline-sm: 14px;
+
+$font-size-filter-item: 16px; 
+$font-size-filter-item-sm: 14px;
+
+$font-size-material-icons: 24px;
+$font-size-material-icons-sm: 18px;
