--- a/style.css
+++ b/style.css
@@ -29422,6 +29422,20 @@ progress {
   border: 2px solid var(--acid-color);
 }
 
+.border-x-theme-color {
+  border-left: 2px solid var(--acid-color);
+  border-right: 2px solid var(--acid-color);
+}
+
+.border-y-theme-color {
+  border-bottom: 2px solid var(--acid-color);
+  border-top: 2px solid var(--acid-color);
+}
+
+.border-b-theme-color {
+  border-bottom: 2px solid var(--acid-color);
+}
+
 .border-theme-color--hover {
   border: 2px solid rgba(255, 255, 255, 0);
   transition: border 350ms;
@@ -29757,6 +29771,10 @@ progress {
 
 .material-symbols-filled {
   font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+
+.material-symbols-medium {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 .material-symbols-light {
@@ -30637,6 +30655,25 @@ progress {
   font-size: 18px;
 }
 
+.croxo-work-filters form .post-type-filter {
+  background-color: white;
+  bottom: 0;
+  height: 35vh;
+  left: 0;
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  z-index: 3;
+}
+@media (min-width: 576px) {
+  .croxo-work-filters form .post-type-filter {
+    background-color: unset;
+    height: initial;
+    position: relative;
+    width: initial;
+    z-index: initial;
+  }
+}
 .croxo-work-filters form .post-type-filter .post-type-filter__wrapper {
   column-gap: 12px;
 }
