--- a/scss/global/globalStyles.scss
+++ b/scss/global/globalStyles.scss
@@ -95,6 +95,10 @@
 	background-color: var(--acid-color);
 }
 
+.border-color-theme-color {
+	border-color: var(--acid-color);
+}
+
 .border-theme-color {
 	border: 2px solid var(--acid-color);
 }
@@ -111,6 +115,16 @@
 
 .border-b-theme-color {
 	border-bottom: 2px solid var(--acid-color);
+}
+
+.border-t-theme-color {
+	border-top: 2px solid var(--acid-color);
+}
+
+.border-t-theme-color-sm-0 {
+	@include media-breakpoint-up(sm) {
+		border-top: 2px solid var(--acid-color);
+	}
 }
 
 .border-theme-color--hover {
@@ -336,11 +350,11 @@
 }
 
 .material-symbols-medium {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+	font-variation-settings:
+		'FILL' 0,
+		'wght' 400,
+		'GRAD' 0,
+		'opsz' 24
 }
 
 .material-symbols-light {
@@ -349,6 +363,12 @@
 		'wght' 300,
 		'GRAD' 0,
 		'opsz' 24
+}
+
+//opacity
+
+.transparent {
+	opacity: 0;
 }
 
 //pointer events
@@ -404,7 +424,15 @@
 
 	//TODO: insert other positions
 	.p-top-#{$i} {
-		top: calc($i * 6px)
+		top: calc($i * 6px);
+	}
+}
+
+@for $i from 1 through 20 {
+
+	//TODO: insert other positions
+	.z-index-#{$i} {
+		z-index: $i;
 	}
 }
 
@@ -416,13 +444,13 @@
 }
 
 .sm-ratio-square {
-    @include media-breakpoint-up(sm) {
+	@include media-breakpoint-up(sm) {
 		aspect-ratio: 1 / 1;
 	}
 }
 
 .md-ratio-square {
-    @include media-breakpoint-up(md) {
+	@include media-breakpoint-up(md) {
 		aspect-ratio: 1 / 1;
 	}
 }
@@ -533,7 +561,7 @@
 
 	@include media-breakpoint-up(md) {
 		font-size: $font-size-filter-item;
-	} 
+	}
 }
 
 .croxo-text-filter-reset {
@@ -541,7 +569,7 @@
 
 	@include media-breakpoint-up(md) {
 		font-size: $font-size-material-icons;
-	} 
+	}
 }
 
 @for $i from 1 through 30 {
