--- a/scss/filters/workFilters.scss
+++ b/scss/filters/workFilters.scss
@@ -8,6 +8,8 @@
     }
 }
 
+
+
 .croxo-work-filters {
     position: relative;
 
@@ -27,7 +29,6 @@
         .post-type-filter {
 
             .post-type-filter__wrapper {
-                column-gap: 12px;
 
                 &:first-child {
                     label {
@@ -51,7 +52,12 @@
                 }
 
                 label {
+                    border-left-width: 0px;
                     flex-shrink: 0;
+
+                    &:first-child {
+                        border-left-width: 2px;
+                    }
 
                     @include media-breakpoint-up(lg) {
                         flex-shrink: unset;
@@ -69,22 +75,26 @@
                     input {
                         &:checked {
                             &+span {
-                                border: 2px solid var(--acid-color);
+                                background-color: var(--acid-color);
+                                color: white;
                             }
                         }
                     }
 
                     span {
-                        border: 2px solid transparent;
                         transition: all 350ms;
                     }
 
                     &.reset-btn {
-                        transform-origin: center center;
-                        transition: all 850ms;
 
-                        &:hover {
-                            transform: rotate(-360deg);
+                        span {
+                            font-size: 16px;
+                            transform-origin: center center;
+                            transition: all 1150ms;
+
+                            &:hover {
+                                transform: rotate(-360deg);
+                            }
                         }
                     }
                 }
