--- a/scss/global/variables.scss
+++ b/scss/global/variables.scss
@@ -1,5 +1,9 @@
 //colors
 $croxo-color-text: #212529;
+$croxo-color-black: #333333;
+
+//fonts
+$croxo-font-text: 'Syne';
 
 //text
 $font-size-h1: 54px;
