--- a/scss/croxoicons/style.css
+++ b/scss/croxoicons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'croxoicons';
-  src:  url('fonts/croxoicons.eot?ikkjkv');
-  src:  url('fonts/croxoicons.eot?ikkjkv#iefix') format('embedded-opentype'),
-    url('fonts/croxoicons.ttf?ikkjkv') format('truetype'),
-    url('fonts/croxoicons.woff?ikkjkv') format('woff'),
-    url('fonts/croxoicons.svg?ikkjkv#croxoicons') format('svg');
+  src:  url('fonts/croxoicons.eot?4ioxfy');
+  src:  url('fonts/croxoicons.eot?4ioxfy#iefix') format('embedded-opentype'),
+    url('fonts/croxoicons.ttf?4ioxfy') format('truetype'),
+    url('fonts/croxoicons.woff?4ioxfy') format('woff'),
+    url('fonts/croxoicons.svg?4ioxfy#croxoicons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -48,4 +48,7 @@
 }
 .croxo-iconsinstagram:before {
   content: "\e907";
+}
+.croxo-iconsgalinhierocriativo-title:before {
+  content: "\e908";
 }
