--- a/scss/croxoicons/style.scss
+++ b/scss/croxoicons/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?ikkjkv');
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?ikkjkv#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?ikkjkv') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?ikkjkv') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?ikkjkv##{$icomoon-font-family}') format('svg');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?4ioxfy');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?4ioxfy#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?4ioxfy') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?4ioxfy') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?4ioxfy##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -29,42 +29,47 @@
 
 .croxo-iconsfavicon {
   &:before {
-    content: unquote("\"#{ $croxo-iconsfavicon }\""); 
+    content: $croxo-iconsfavicon; 
   }
 }
 .croxo-iconstitulo_site_1 {
   &:before {
-    content: unquote("\"#{ $croxo-iconstitulo_site_1 }\""); 
+    content: $croxo-iconstitulo_site_1; 
   }
 }
 .croxo-iconstitulo_site_2 {
   &:before {
-    content: unquote("\"#{ $croxo-iconstitulo_site_2 }\""); 
+    content: $croxo-iconstitulo_site_2; 
   }
 }
 .croxo-iconslava_logo-01 {
   &:before {
-    content: unquote("\"#{ $croxo-iconslava_logo-01 }\""); 
+    content: $croxo-iconslava_logo-01; 
   }
 }
 .croxo-iconslava_logo-01-mirror {
   &:before {
-    content: unquote("\"#{ $croxo-iconslava_logo-01-mirror }\""); 
+    content: $croxo-iconslava_logo-01-mirror; 
   }
 }
 .croxo-iconsheart1 {
   &:before {
-    content: unquote("\"#{ $croxo-iconsheart1 }\""); 
+    content: $croxo-iconsheart1; 
   }
 }
 .croxo-iconsheart2 {
   &:before {
-    content: unquote("\"#{ $croxo-iconsheart2 }\""); 
+    content: $croxo-iconsheart2; 
   }
 }
 .croxo-iconsinstagram {
   &:before {
-    content: unquote("\"#{ $croxo-iconsinstagram }\""); 
+    content: $croxo-iconsinstagram; 
+  }
+}
+.croxo-iconsgalinhierocriativo-title {
+  &:before {
+    content: $croxo-iconsgalinhierocriativo-title; 
   }
 }
 
