--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,9 +50,9 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 @import './components/orderInfo.scss';
 @import './filters/workFilters.scss';
 @import './forms/contactForm.scss';
-@import './menus/topNav.scss';
-// @import './post_types/customPostType.scss'; 
-// @import './shop/storeFront.scss'; 
+@import './menus/topNav.scss'; 
+
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap');
 
 @font-face {
     font-family: Lithops;
