--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap");
 .container,
 .container-fluid,
 .container-xxl,
@@ -29391,6 +29392,17 @@ progress {
   transition: all 350ms;
 }
 
+.theme-color--hover {
+  transition: all 350ms;
+}
+.theme-color--hover:hover {
+  color: var(--acid-color);
+}
+
+.theme-color-black {
+  color: #333333;
+}
+
 .theme-color--fill {
   fill: var(--acid-color);
   transition: all 350ms;
@@ -29418,12 +29430,20 @@ progress {
   background-color: var(--acid-color);
 }
 
+.border-color-theme-black {
+  border-color: #333333;
+}
+
 .border-color-theme-color {
   border-color: var(--acid-color);
 }
 
 .border-theme-color {
   border: 2px solid var(--acid-color);
+}
+
+.border-theme-black {
+  border: 2px solid #333333;
 }
 
 .border-x-theme-color {
@@ -30051,14 +30071,19 @@ progress {
 }
 
 .croxo-font-text {
-  font-family: "Terminal Grotesque";
+  font-family: "Syne";
 }
 
 .croxo-font-text--deep {
-  font-family: "Terminal Grotesque";
+  font-family: "Syne";
 }
 .croxo-font-text--deep *:not(.material-symbols-outlined) {
-  font-family: "Terminal Grotesque";
+  font-family: "Syne";
+}
+
+.croxo-menu-item {
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .croxo-text-giant {
@@ -30334,8 +30359,8 @@ progress {
 
 @font-face {
   font-family: "croxoicons";
-  src: url("fonts/croxoicons.eot?ikkjkv");
-  src: url("fonts/croxoicons.eot?ikkjkv#iefix") format("embedded-opentype"), url("fonts/croxoicons.ttf?ikkjkv") format("truetype"), url("fonts/croxoicons.woff?ikkjkv") format("woff"), url("fonts/croxoicons.svg?ikkjkv#croxoicons") format("svg");
+  src: url("fonts/croxoicons.eot?4ioxfy");
+  src: url("fonts/croxoicons.eot?4ioxfy#iefix") format("embedded-opentype"), url("fonts/croxoicons.ttf?4ioxfy") format("truetype"), url("fonts/croxoicons.woff?4ioxfy") format("woff"), url("fonts/croxoicons.svg?4ioxfy#croxoicons") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -30386,6 +30411,10 @@ progress {
   content: "\e907";
 }
 
+.croxo-iconsgalinhierocriativo-title:before {
+  content: "\e908";
+}
+
 .site-header .site-title a {
   color: var(--acid-color);
   font-family: "Pilowlava";
@@ -30415,7 +30444,7 @@ progress {
 }
 @media (min-width: 1400px) {
   .site-header .site-title a {
-    font-size: 168px;
+    font-size: 165px;
   }
 }
 .site-header .site-title a:hover {
@@ -30446,7 +30475,7 @@ progress {
   }
 }
 .discos-grelha .discos .disco {
-  border: 2px solid transparent;
+  border: 2px solid #333333;
   flex-basis: calc(50% - 12px);
   flex-grow: 0;
   list-style-type: none;
@@ -30663,7 +30692,7 @@ progress {
   pointer-events: none !important;
 }
 .croxo-gallery .croxo-gallery__gallery-item {
-  border: 2px solid transparent;
+  border: 2px solid #333333;
   flex-basis: calc(0.333333333 * (100% - 48px));
   flex-grow: 0;
   flex-shrink: 0;
@@ -30777,9 +30806,6 @@ progress {
     top: initial;
   }
 }
-.croxo-work-filters form .post-type-filter .post-type-filter__wrapper {
-  column-gap: 12px;
-}
 .croxo-work-filters form .post-type-filter .post-type-filter__wrapper:first-child label:first-child {
   align-self: flex-start;
   position: absolute !important;
@@ -30799,7 +30825,11 @@ progress {
   }
 }
 .croxo-work-filters form .post-type-filter .post-type-filter__wrapper label {
+  border-left-width: 0px;
   flex-shrink: 0;
+}
+.croxo-work-filters form .post-type-filter .post-type-filter__wrapper label:first-child {
+  border-left-width: 2px;
 }
 @media (min-width: 992px) {
   .croxo-work-filters form .post-type-filter .post-type-filter__wrapper label {
@@ -30815,17 +30845,18 @@ progress {
   }
 }
 .croxo-work-filters form .post-type-filter .post-type-filter__wrapper label input:checked + span {
-  border: 2px solid var(--acid-color);
+  background-color: var(--acid-color);
+  color: white;
 }
 .croxo-work-filters form .post-type-filter .post-type-filter__wrapper label span {
-  border: 2px solid transparent;
   transition: all 350ms;
 }
-.croxo-work-filters form .post-type-filter .post-type-filter__wrapper label.reset-btn {
+.croxo-work-filters form .post-type-filter .post-type-filter__wrapper label.reset-btn span {
+  font-size: 16px;
   transform-origin: center center;
-  transition: all 850ms;
+  transition: all 1150ms;
 }
-.croxo-work-filters form .post-type-filter .post-type-filter__wrapper label.reset-btn:hover {
+.croxo-work-filters form .post-type-filter .post-type-filter__wrapper label.reset-btn span:hover {
   transform: rotate(-360deg);
 }
 
@@ -30903,83 +30934,34 @@ progress {
   display: none;
 }
 
-.site-navigation .menu-topnav-container {
-  width: 100%;
-}
-.site-navigation .menu-topnav-container .menu {
-  justify-content: space-between;
-}
-.site-navigation .menu-topnav-container .menu .menu-item {
+.menu-topnav-container .menu {
   display: flex;
-  flex: 1;
-  justify-content: center;
-}
-.site-navigation .menu-topnav-container .menu .menu-item:first-child {
-  justify-content: flex-start;
-}
-.site-navigation .menu-topnav-container .menu .menu-item:last-child {
-  justify-content: flex-end;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about {
-  position: relative;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about.menu-item--about--disabled {
-  pointer-events: none;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about.menu-item--about--disabled * {
-  pointer-events: none;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about.menu-item--about--disabled .menu-item--about__wrapper .menu-item--about__title {
-  background-color: transparent;
-  opacity: 0.2;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about.menu-item--about--disabled .menu-item--about__wrapper .menu-item--about__text {
-  display: none;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about .menu-item--about__wrapper {
-  overflow: hidden;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about .menu-item--about__wrapper:hover {
-  bottom: var(--aboutMenuTextHeightNeg);
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about .menu-item--about__wrapper:hover .menu-item--about__text {
-  margin-top: 0;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about .menu-item--about__wrapper .menu-item--about__title {
-  align-self: stretch;
-  background-color: white;
-  color: var(--acid-color);
-  padding: 8px 15px;
-  text-align: right;
-  z-index: 3;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about .menu-item--about__wrapper .menu-item--about__text {
-  background-color: white;
-  border: 2px solid transparent;
-  border-top: 0px !important;
-  margin-top: var(--aboutMenuTextHeightNeg);
-  z-index: 2;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about .menu-item--about__wrapper .menu-item--about__text * {
-  text-align: right;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about .menu-item--about__wrapper .menu-item--about__text a {
-  color: black;
-  padding-bottom: 3px;
-  padding-left: 3px;
-  padding-right: 0;
-  margin-left: auto;
-  width: fit-content;
-}
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about .menu-item--about__wrapper .menu-item--about__text p {
   margin: 0;
+  padding: 0;
 }
-.site-navigation .menu-topnav-container .menu .menu-item.menu-item--about .menu-item--about__wrapper .menu-item--about__text .material-symbols-outlined {
-  font-family: "Material Symbols Outlined" !important;
+.menu-topnav-container .menu li {
+  list-style-type: none;
+  flex-shrink: 0;
 }
-.site-navigation .menu-topnav-container .menu .menu-item a {
-  color: var(--acid-color);
+.menu-topnav-container .menu li:first-child a {
+  border-left-width: 2px;
+}
+.menu-topnav-container .menu li a {
+  border: 2px solid #333333;
+  border-bottom-width: 0px;
+  border-left-width: 0px;
+  color: #333333;
+  font-family: "Syne";
+  font-weight: 600;
+  font-size: 19px;
+  letter-spacing: 0.2px;
+  padding: 4px 8px;
   text-decoration: none;
+  text-transform: uppercase;
+  transition: all 350ms;
+}
+.menu-topnav-container .menu li a:hover {
+  color: var(--acid-color);
 }
 
 .site-navigation--scroll {
@@ -31009,6 +30991,66 @@ progress {
 }
 .site-navigation--scroll .site-navigation .menu-topnav-container .menu {
   margin: 0;
+}
+
+.menu-item--about {
+  position: relative;
+}
+.menu-item--about.menu-item--about--disabled {
+  pointer-events: none;
+}
+.menu-item--about.menu-item--about--disabled * {
+  pointer-events: none;
+}
+.menu-item--about.menu-item--about--disabled .menu-item--about__wrapper .menu-item--about__title {
+  background-color: transparent;
+  opacity: 0.2;
+}
+.menu-item--about.menu-item--about--disabled .menu-item--about__wrapper .menu-item--about__text {
+  display: none;
+}
+.menu-item--about .menu-item--about__wrapper {
+  overflow: hidden;
+}
+.menu-item--about .menu-item--about__wrapper:hover {
+  bottom: var(--aboutMenuTextHeightNeg);
+}
+.menu-item--about .menu-item--about__wrapper:hover .menu-item--about__text {
+  margin-top: 0;
+}
+.menu-item--about .menu-item--about__wrapper .menu-item--about__title {
+  align-self: stretch;
+  background-color: white;
+  font-family: "Syne";
+  font-weight: 600;
+  padding: 4px 8px;
+  text-align: right;
+  text-transform: uppercase;
+  z-index: 3;
+}
+.menu-item--about .menu-item--about__wrapper .menu-item--about__text {
+  background-color: white;
+  border: 2px solid transparent;
+  border-top: 0px !important;
+  margin-top: var(--aboutMenuTextHeightNeg);
+  z-index: 2;
+}
+.menu-item--about .menu-item--about__wrapper .menu-item--about__text * {
+  text-align: right;
+}
+.menu-item--about .menu-item--about__wrapper .menu-item--about__text a {
+  color: black;
+  padding-bottom: 3px;
+  padding-left: 3px;
+  padding-right: 0;
+  margin-left: auto;
+  width: fit-content;
+}
+.menu-item--about .menu-item--about__wrapper .menu-item--about__text p {
+  margin: 0;
+}
+.menu-item--about .menu-item--about__wrapper .menu-item--about__text .material-symbols-outlined {
+  font-family: "Material Symbols Outlined" !important;
 }
 
 @font-face {
