--- a/scss/global/globalStyles.scss
+++ b/scss/global/globalStyles.scss
@@ -22,6 +22,14 @@
 	}
 }
 
+.croxo-background-white {
+	background-color: white;
+}
+
+.croxo-background-black {
+	background-color: $croxo-color-black;
+}
+
 //colors
 
 .croxo-color-text {
@@ -112,6 +120,10 @@
 	border-color: $croxo-color-black;
 }
 
+.border-color-theme-white {
+	border-color: white;
+}
+
 .border-color-theme-color {
 	border-color: var(--acid-color);
 }
@@ -122,6 +134,24 @@
 
 .border-theme-black {
 	border: 2px solid $croxo-color-black;
+}
+
+.border-y-theme-black {
+	border-bottom: 2px solid $croxo-color-black;
+	border-top: 2px solid $croxo-color-black;
+}
+
+.border-x-theme-black {
+	border-left: 2px solid $croxo-color-black;
+	border-right: 2px solid $croxo-color-black;
+}
+
+.border-s-theme-black {
+	border-left: 2px solid $croxo-color-black;
+}
+
+.border-e-theme-black {
+	border-right: 2px solid $croxo-color-black;
 }
 
 .border-x-theme-color {
@@ -163,9 +193,7 @@
 
 .border-theme-color--important {
 	border: 2px solid var(--acid-color) !important;
-}
-
-
+}  
 
 //cursor
 
@@ -177,6 +205,12 @@
 
 .flexone {
 	flex: 1;
+}
+
+.flexone-md-unset {
+	@include media-breakpoint-up(md) {
+		flex: unset;
+	}
 }
 
 .flextwo {
@@ -498,6 +532,20 @@
 	}
 }
 
+.reset-button--soft {
+	color: inherit;
+
+	&:hover {
+		background: none;
+		background-color: none;
+		color: inherit;
+	}
+
+	&:focus {
+		background-color: transparent;
+	}
+}
+
 .reset-link {
 	color: inherit;
 	text-decoration: none;
@@ -625,6 +673,14 @@
 	margin-left: -2px;
 }
 
+.tilt-l-3 {
+	margin-left: -3px;
+}
+
+.tilt-l-6 {
+	margin-left: -6px;
+}
+
 .tilt-r-2 {
 	margin-right: -2px;
 }
@@ -653,6 +709,10 @@
 
 .tilt-t-3 {
 	margin-top: -3px;
+}
+
+.tilt-t-6 {
+	margin-top: -6px;
 }
 
 .tilt-t-lg-6 {
@@ -699,4 +759,4 @@
 	a {
 		text-decoration: unset;
 	}
-} 
+}
