--- a/style.css
+++ b/style.css
@@ -29354,6 +29354,14 @@ progress {
   background-color: transparent !important;
 }
 
+.croxo-background-white {
+  background-color: white;
+}
+
+.croxo-background-black {
+  background-color: #333333;
+}
+
 .croxo-color-text {
   color: #212529;
 }
@@ -29434,6 +29442,10 @@ progress {
   border-color: #333333;
 }
 
+.border-color-theme-white {
+  border-color: white;
+}
+
 .border-color-theme-color {
   border-color: var(--acid-color);
 }
@@ -29444,6 +29456,24 @@ progress {
 
 .border-theme-black {
   border: 2px solid #333333;
+}
+
+.border-y-theme-black {
+  border-bottom: 2px solid #333333;
+  border-top: 2px solid #333333;
+}
+
+.border-x-theme-black {
+  border-left: 2px solid #333333;
+  border-right: 2px solid #333333;
+}
+
+.border-s-theme-black {
+  border-left: 2px solid #333333;
+}
+
+.border-e-theme-black {
+  border-right: 2px solid #333333;
 }
 
 .border-x-theme-color {
@@ -29492,6 +29522,12 @@ progress {
 
 .flexone {
   flex: 1;
+}
+
+@media (min-width: 768px) {
+  .flexone-md-unset {
+    flex: unset;
+  }
 }
 
 .flextwo {
@@ -30057,6 +30093,18 @@ progress {
   background-color: transparent;
 }
 
+.reset-button--soft {
+  color: inherit;
+}
+.reset-button--soft:hover {
+  background: none;
+  background-color: none;
+  color: inherit;
+}
+.reset-button--soft:focus {
+  background-color: transparent;
+}
+
 .reset-link {
   color: inherit;
   text-decoration: none;
@@ -30294,6 +30342,14 @@ progress {
   margin-left: -2px;
 }
 
+.tilt-l-3 {
+  margin-left: -3px;
+}
+
+.tilt-l-6 {
+  margin-left: -6px;
+}
+
 .tilt-r-2 {
   margin-right: -2px;
 }
@@ -30319,6 +30375,10 @@ progress {
 
 .tilt-t-3 {
   margin-top: -3px;
+}
+
+.tilt-t-6 {
+  margin-top: -6px;
 }
 
 @media (min-width: 992px) {
@@ -30788,6 +30848,24 @@ progress {
 .croxo-mobile-filters-modal .croxo-mobile-filters-modal__wrapper.is-active {
   margin-bottom: 0;
 }
+.croxo-mobile-filters-modal .croxo-mobile-filters-modal__wrapper .post-type-filter {
+  border-left: 2px solid #333333;
+}
+.croxo-mobile-filters-modal .croxo-mobile-filters-modal__wrapper .post-type-filter .post-type-filter__top-bar {
+  border-right: 2px solid #333333;
+}
+.croxo-mobile-filters-modal .croxo-mobile-filters-modal__wrapper .post-type-filter .post-type-filter__wrapper label {
+  border-left-width: 0px;
+  border-top-width: 0px;
+}
+.croxo-mobile-filters-modal .croxo-mobile-filters-modal__wrapper .post-type-filter .post-type-filter__wrapper label input:checked + span {
+  background-color: var(--acid-color);
+  color: white;
+}
+.croxo-mobile-filters-modal .croxo-mobile-filters-modal__wrapper .post-type-filter .post-type-filter__wrapper label span {
+  height: 100%;
+  font-size: 16px;
+}
 
 .croxo-work-filters {
   position: relative;
@@ -30934,33 +31012,89 @@ progress {
   display: none;
 }
 
-.menu-topnav-container .menu {
+.site-navigation.site-navigation--work-grid {
+  justify-content: center;
+}
+.site-navigation.site-navigation--work-grid .menu-topnav-container .menu li a {
+  border-bottom-width: 0px;
+}
+.site-navigation .menu-topnav-container .menu {
   display: flex;
   margin: 0;
   padding: 0;
 }
-.menu-topnav-container .menu li {
+.site-navigation .menu-topnav-container .menu li {
   list-style-type: none;
   flex-shrink: 0;
 }
-.menu-topnav-container .menu li:first-child a {
+.site-navigation .menu-topnav-container .menu li:first-child a {
   border-left-width: 2px;
 }
-.menu-topnav-container .menu li a {
+.site-navigation .menu-topnav-container .menu li.current-menu-item {
+  background-color: var(--acid-color);
+}
+.site-navigation .menu-topnav-container .menu li.current-menu-item:hover a {
+  color: white;
+}
+.site-navigation .menu-topnav-container .menu li.current-menu-item a {
+  color: white;
+}
+.site-navigation .menu-topnav-container .menu li.about-menu-item:hover .about-menu-item__about-content {
+  display: block !important;
+}
+.site-navigation .menu-topnav-container .menu li.about-menu-item .about-menu-item__about-content {
+  background-color: var(--acid-color);
   border: 2px solid #333333;
-  border-bottom-width: 0px;
+  color: white;
+  left: 18px;
+  padding: 30px;
+  padding-bottom: 21px !important;
+  padding-top: 24px !important;
+  position: absolute;
+  top: 38px;
+  width: 28vw;
+  z-index: 3;
+}
+.site-navigation .menu-topnav-container .menu li.about-menu-item .about-menu-item__about-content * {
+  color: white;
+}
+.site-navigation .menu-topnav-container .menu li.about-menu-item .about-menu-item__about-content .about-menu-item__about-content__content {
+  display: block;
+  font-family: "Syne";
+  font-size: 15px;
+  font-weight: 550;
+  line-height: 19px;
+}
+.site-navigation .menu-topnav-container .menu li.about-menu-item .about-menu-item__about-content .about-menu-item__about-content__cta {
+  border-color: white;
+  border-bottom-width: 2px !important;
+  border-left-width: 2px !important;
+  justify-content: center;
+}
+.site-navigation .menu-topnav-container .menu li.about-menu-item .about-menu-item__about-content .about-menu-item__about-content__cta:hover {
+  background-color: white;
+}
+.site-navigation .menu-topnav-container .menu li.about-menu-item .about-menu-item__about-content .about-menu-item__about-content__cta:hover span {
+  color: var(--acid-color);
+}
+.site-navigation .menu-topnav-container .menu li.about-menu-item .about-menu-item__about-content .about-menu-item__about-content__cta span {
+  font-size: 14px;
+  font-weight: 700;
+}
+.site-navigation .menu-topnav-container .menu li a {
+  border: 2px solid #333333;
   border-left-width: 0px;
   color: #333333;
   font-family: "Syne";
   font-weight: 600;
-  font-size: 19px;
+  font-size: 16px;
   letter-spacing: 0.2px;
   padding: 4px 8px;
   text-decoration: none;
   text-transform: uppercase;
   transition: all 350ms;
 }
-.menu-topnav-container .menu li a:hover {
+.site-navigation .menu-topnav-container .menu li a:hover {
   color: var(--acid-color);
 }
 
